--- a/GameJam2017/GameJam2017.csproj
+++ b/GameJam2017/GameJam2017.csproj
@@ -41,9 +41,20 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Core.cs" />
+    <Compile Include="Drawable.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Glamour\GlamourColour.cs" />
+    <Compile Include="Glamour\Effect.cs" />
+    <Compile Include="Glamour\Glamour.cs" />
+    <Compile Include="Glamour\Shape.cs" />
+    <Compile Include="Glamour\Alter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scene\DraftScene.cs" />
+    <Compile Include="Scene\GameScene.cs" />
+    <Compile Include="Scene\MainMenuScene.cs" />
+    <Compile Include="Scene\Scene.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -59,6 +70,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
