--- a/GameJam2017/GameJam2017.csproj
+++ b/GameJam2017/GameJam2017.csproj
@@ -55,6 +55,9 @@
     <Compile Include="Scene\GameScene.cs" />
     <Compile Include="Scene\MainMenuScene.cs" />
     <Compile Include="Scene\Scene.cs" />
+    <Compile Include="Unit\Minion.cs" />
+    <Compile Include="Unit\Unit.cs" />
+    <Compile Include="Unit\Controllable.cs" />
     <Compile Include="Unit\Cursor.cs" />
     <Compile Include="Unit\Field.cs" />
     <Compile Include="Unit\Player.cs" />
