--- a/GameJam2017/GameJam2017.csproj
+++ b/GameJam2017/GameJam2017.csproj
@@ -41,9 +41,11 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Content\Entity.cs" />
     <Compile Include="Core.cs" />
     <Compile Include="Drawable.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Glamour\Deck.cs" />
     <Compile Include="Glamour\GlamourColour.cs" />
     <Compile Include="Glamour\Effect.cs" />
     <Compile Include="Glamour\Glamour.cs" />
