--- a/GameJam2017/GameJam2017.csproj
+++ b/GameJam2017/GameJam2017.csproj
@@ -41,6 +41,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Circle.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Component\Button.cs" />
     <Compile Include="Core.cs" />
