--- a/GameJam2017/GameJam2017.csproj
+++ b/GameJam2017/GameJam2017.csproj
@@ -42,6 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Circle.cs" />
+    <Compile Include="Camera.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Component\Button.cs" />
     <Compile Include="Core.cs" />
